--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ concurrency:
   cancel-in-progress: true
 
 permissions:
-  contents: write
+  contents: read
 
 env:
   PIP_DISABLE_PIP_VERSION_CHECK: "1"
@@ -29,14 +29,15 @@ env:
 jobs:
   build-windows:
     runs-on: windows-latest
+    environment: release
     timeout-minutes: 120
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
         with:
           ref: ${{ inputs.ref || github.ref_name }}
 
-      - uses: actions/setup-python@v5
+      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
           python-version: "3.12"
           cache: pip
@@ -47,10 +48,7 @@ jobs:
         shell: pwsh
         run: |
           $start = Get-Date
-          python -m pip install --upgrade pip
-          python -m pip install -e ".[dev,gui]"
-          python -m pip uninstall -y nuitka
-          python -m pip install --no-cache-dir nuitka==2.8.10
+          & ".github\scripts\install_ci_python_deps.ps1" -Extras "dev,gui" -ConstraintsFile ".github/constraints/ci-tools.txt"
           python -m nuitka --version
           $elapsed = [Math]::Round(((Get-Date) - $start).TotalSeconds, 3)
           "elapsed_seconds=$elapsed" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
@@ -109,7 +107,7 @@ jobs:
           Get-Content $statusFile | ForEach-Object { Write-Host $_ }
 
       - name: Upload build artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: ProducerOS-windows
           path: |
