--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -2,9 +2,9 @@ name: Python CI
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "dev"]
   pull_request:
-    branches: ["main"]
+    branches: ["main", "dev"]
 
 concurrency:
   group: python-ci-${{ github.ref }}
@@ -61,3 +61,4 @@ jobs:
         run: |
           python -m pip install --upgrade build
           python -m build --sdist --wheel
+
